apps/base/tautulli/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tautulli
  namespace: tautulli
spec:
  selector:
    app: tautulli
  ports:
    - port: 8181
      targetPort: 8181
